--- a/08-javascript/25-challenge-arrays.html
+++ b/08-javascript/25-challenge-arrays.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-    </style>
 </head>
 
 <body>
     <main>
         <header>
-            <h1>Challenge Arrays</h1>
+            <nav class="controls">
+                <a href="index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path fill="#ffffff"
+                            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z" />
+                    </svg>
+                </a>
+            </nav>
         </header>
         <section>
             <div class="title-logo"><img src="/08-javascript/images/arrays/title.png" alt=""></div>
@@ -49,10 +55,11 @@
             </div>
             <div class="iterations">
                 <div class="button-container">
+                    <div class="buttons-ejecutar"><button class="button-4" id="ejecutar">EXEC</button></div>
                     <div class="buttons-first"><button class="button-1" id="first">FIRST</button></div>
-                    <div class="buttons-position"><input class="button-2" placeholder="POSITION" id="postion"></input></div>
+                    <div class="buttons-position"><input type="number" min="0" max="7" class="button-2"
+                            placeholder="POS" id="position"></input></div>
                     <div class="buttons-last"><button class="button-3" id="last">LAST</button></div>
-                    <div class="buttons-ejecutar"><button class="button-4" id="ejecutar">+</button></div>
                     <div class="buttons-add"><button class="button-5" id="add">ADD</button></div>
                     <div class="buttons-remove"><button class="button-6" id="remove">REMOVE</button></div>
                 </div>
@@ -60,16 +67,305 @@
         </section>
     </main>
     <script>
-        const first = document.getElementById('first');
-        const add = document.getElementById('add')
-        const bg = document.querySelector('.button-container')
+        document.addEventListener('DOMContentLoaded', function () {
+            // Get all buttons
+            const firstBtn = document.getElementById('first');
+            const positionInput = document.getElementById('position');
+            const lastBtn = document.getElementById('last');
+            const ejecutarBtn = document.getElementById('ejecutar');
+            const addBtn = document.getElementById('add');
+            const removeBtn = document.getElementById('remove');
 
-        first.addEventListener('click',function(){
-            bg.style.background="url('images/arrays/first.png')"
-        })
-        add.addEventListener('click',function(){
-            bg.style.background="url('images/arrays/add.png')"
-        })
+            // Create arrays of button groups
+            const functionButtons = [firstBtn, lastBtn, addBtn, removeBtn];
+            const positionButtons = [firstBtn, lastBtn, positionInput];
+            const actionButtons = [addBtn, removeBtn];
+
+            // Get all slots from both inventories
+            const inventarioASlots = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'].map(id => document.getElementById(id));
+            const inventarioBSlots = ['1', '2', '3', '4', '5', '6', '7', '8'].map(id => document.getElementById(id));
+
+            // Initialize arrays to track our inventory and selections
+            let inventory = []; // Our inventory array (Items in inventario-a)
+            let selectedMethod = null; // Currently selected method (first, last, position, add, remove)
+            let selectedAction = null; // Selected action (add or remove)
+            let selectedPosition = null; // Selected position (first, last, position)
+            let selectedItemB = null; // Selected item from inventario-b
+            let selectedSlotA = null; // Selected slot in inventario-a
+
+            // Add CSS for active and inactive states
+            const style = document.createElement('style');
+            style.textContent = `
+        .active-button {
+            background-color: #4CAF50 !important; /* Verde */
+            color: white !important;
+            border-color: #2E7D32 !important;
+        }
+        .inactive-button {
+            opacity: 0.5 !important;
+            cursor: not-allowed !important;
+        }
+        .selected-item, .selected-slot {
+            background-color: rgba(76, 175, 80, 0.3) !important; /* Verde semi-transparente */
+            border-color: #4CAF50 !important;
+        }
+    `;
+            document.head.appendChild(style);
+
+            // Function to handle method button click
+            function handleMethodButtonClick(clickedButton) {
+                // Check which type of button was clicked
+                const isPositionButton = positionButtons.includes(clickedButton);
+                const isActionButton = actionButtons.includes(clickedButton);
+
+                // If it's a position button
+                if (isPositionButton) {
+                    // Toggle the active state of the clicked button
+                    if (clickedButton.classList.contains('active-button')) {
+                        // If already active, deactivate it
+                        clickedButton.classList.remove('active-button');
+                        selectedPosition = null;
+                    } else {
+                        // Remove active class from all position buttons
+                        positionButtons.forEach(btn => {
+                            if (btn !== positionInput) {
+                                btn.classList.remove('active-button');
+                            }
+                        });
+
+                        // Add active class to clicked button
+                        clickedButton.classList.add('active-button');
+                        selectedPosition = clickedButton.id;
+                    }
+                }
+
+                // If it's an action button
+                if (isActionButton) {
+                    // Toggle the active state of the clicked button
+                    if (clickedButton.classList.contains('active-button')) {
+                        // If already active, deactivate it
+                        clickedButton.classList.remove('active-button');
+                        selectedAction = null;
+                        ejecutarBtn.textContent = "EXEC";
+                    } else {
+                        // Remove active class from all action buttons
+                        actionButtons.forEach(btn => {
+                            btn.classList.remove('active-button');
+                        });
+
+                        // Add active class to clicked button
+                        clickedButton.classList.add('active-button');
+                        selectedAction = clickedButton.id;
+
+                        // Update EXEC button text
+                        if (selectedAction === 'add') {
+                            ejecutarBtn.textContent = "+";
+                        } else if (selectedAction === 'remove') {
+                            ejecutarBtn.textContent = "-";
+                        }
+                    }
+                }
+
+                // Update inactive classes
+                updateInactiveClasses();
+            }
+
+            // Function to update inactive classes
+            function updateInactiveClasses() {
+                // First clear all inactive classes
+                functionButtons.forEach(btn => {
+                    btn.classList.remove('inactive-button');
+                });
+
+                positionInput.classList.remove('inactive-button');
+
+                // If an action button is selected, make the other action button inactive
+                if (selectedAction === 'add') {
+                    removeBtn.classList.add('inactive-button');
+                } else if (selectedAction === 'remove') {
+                    addBtn.classList.add('inactive-button');
+                }
+
+                // If a position button is selected, make the other position buttons inactive
+                if (selectedPosition === 'first') {
+                    lastBtn.classList.add('inactive-button');
+                    positionInput.classList.add('inactive-button');
+                } else if (selectedPosition === 'last') {
+                    firstBtn.classList.add('inactive-button');
+                    positionInput.classList.add('inactive-button');
+                } else if (selectedPosition === 'position') {
+                    firstBtn.classList.add('inactive-button');
+                    lastBtn.classList.add('inactive-button');
+                }
+            }
+
+            // Add click event listeners to all method buttons
+            functionButtons.forEach(btn => {
+                btn.addEventListener('click', function () {
+                    handleMethodButtonClick(this);
+                });
+            });
+
+            // Handle position input focus
+            positionInput.addEventListener('focus', function () {
+                // Deactivate first and last buttons
+                firstBtn.classList.remove('active-button');
+                lastBtn.classList.remove('active-button');
+
+                // Mark position input as active
+                this.classList.add('active-button');
+
+                // Set position as selected
+                selectedPosition = 'position';
+
+                // Update inactive classes
+                updateInactiveClasses();
+            });
+
+            // Handle click on inventario-b slots (select item to add)
+            inventarioBSlots.forEach(slot => {
+                slot.addEventListener('click', function () {
+                    // Only allow selection if we're in add mode
+                    if (selectedAction !== 'add') return;
+
+                    // If the slot is already in inventory-a, don't allow selection
+                    if (inventory.includes(this.id)) return;
+
+                    // Clear previous selection
+                    inventarioBSlots.forEach(s => s.classList.remove('selected-item'));
+
+                    // Select this slot
+                    this.classList.add('selected-item');
+                    selectedItemB = this.id;
+                });
+            });
+
+            // Handle click on inventario-a slots (select position for operations)
+            inventarioASlots.forEach(slot => {
+                slot.addEventListener('click', function () {
+                    // Get the index of this slot
+                    const slotIndex = inventarioASlots.findIndex(s => s.id === this.id);
+
+                    // If we're in remove mode and this slot doesn't have an item, don't allow selection
+                    if (selectedAction === 'remove' && slotIndex >= inventory.length) return;
+
+                    // Clear previous selection
+                    inventarioASlots.forEach(s => s.classList.remove('selected-slot'));
+
+                    // Select this slot
+                    this.classList.add('selected-slot');
+                    selectedSlotA = this.id;
+                });
+            });
+
+            // Execute button functionality
+            ejecutarBtn.addEventListener('click', function () {
+                // Check if we have necessary selections
+                if (!selectedAction) {
+                    alert('Selecciona ADD o REMOVE primero');
+                    return;
+                }
+
+                // ADD functionality
+                if (selectedAction === 'add') {
+                    // Check if inventory is full
+                    if (inventory.length >= 8) {
+                        alert('Inventario lleno. Remueve algún item primero.');
+                        return;
+                    }
+
+                    if (!selectedItemB) {
+                        alert('Selecciona un item para agregar');
+                        return;
+                    }
+
+                    // Different array methods based on selected position
+                    if (selectedPosition === 'first') {
+                        // Add to the beginning of the array (unshift)
+                        inventory.unshift(selectedItemB);
+                    } else if (selectedPosition === 'last') {
+                        // Add to the end of the array (push)
+                        inventory.push(selectedItemB);
+                    } else if (selectedPosition === 'position') {
+                        const position = parseInt(positionInput.value);
+                        if (isNaN(position) || position < 0 || position > inventory.length) {
+                            alert('Posición inválida');
+                            return;
+                        }
+                        // Add at specific position (splice)
+                        inventory.splice(position, 0, selectedItemB);
+                    } else if (selectedSlotA) {
+                        // Get the index of the selected slot in inventory-a
+                        const slotIndex = inventarioASlots.findIndex(slot => slot.id === selectedSlotA);
+                        // Add at specific position (splice)
+                        inventory.splice(slotIndex, 0, selectedItemB);
+                    } else {
+                        alert('Selecciona FIRST, LAST, una posición específica, o haz clic en un slot de tu inventario');
+                        return;
+                    }
+                }
+                // REMOVE functionality
+                else if (selectedAction === 'remove') {
+                    if (inventory.length === 0) {
+                        alert('El inventario está vacío');
+                        return;
+                    }
+
+                    if (selectedPosition === 'first') {
+                        // Remove from beginning (shift)
+                        inventory.shift();
+                    } else if (selectedPosition === 'last') {
+                        // Remove from end (pop)
+                        inventory.pop();
+                    } else if (selectedPosition === 'position') {
+                        const position = parseInt(positionInput.value);
+                        if (isNaN(position) || position < 0 || position >= inventory.length) {
+                            alert('Posición inválida');
+                            return;
+                        }
+                        // Remove at specific position (splice)
+                        inventory.splice(position, 1);
+                    } else if (selectedSlotA) {
+                        // Find the slot index
+                        const removeIndex = inventarioASlots.findIndex(slot => slot.id === selectedSlotA);
+                        // If there's an item at this position in our inventory
+                        if (removeIndex < inventory.length) {
+                            // Remove from array (splice)
+                            inventory.splice(removeIndex, 1);
+                        }
+                    } else {
+                        alert('Selecciona FIRST, LAST, una posición específica, o haz clic en un item de tu inventario');
+                        return;
+                    }
+                }
+
+                // Clear all slots in inventario-a
+                inventarioASlots.forEach(slot => {
+                    while (slot.firstChild) {
+                        slot.removeChild(slot.firstChild);
+                    }
+                });
+
+                // Update the visual inventory based on the array
+                inventory.forEach((itemId, index) => {
+                    if (index < inventarioASlots.length) {
+                        const slot = inventarioASlots[index];
+                        const originalImg = document.getElementById(itemId).querySelector('img');
+                        const imgClone = originalImg.cloneNode(true);
+                        slot.appendChild(imgClone);
+                    }
+                });
+
+                // Clear selections
+                inventarioBSlots.forEach(s => s.classList.remove('selected-item'));
+                inventarioASlots.forEach(s => s.classList.remove('selected-slot'));
+                selectedItemB = null;
+                selectedSlotA = null;
+
+                // Log the current inventory state
+                console.log("Current inventory:", inventory);
+            });
+        });
     </script>
 </body>
 
